feat: add condition status for consultation
